--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ ul li a:hover {
         display: flex;
         justify-content: center;
         padding-top: 15px;
-        color:black;
+        color:darkblue;
         font-family: Georgia, 'Times New Roman', Times, serif;
     }
 
@@ -70,7 +70,7 @@ ul li a:hover {
         padding-top: 30px;
         padding-bottom: 25px;
         padding-left: 10px;
-        color: darkblue;
+        color: black;
         font-family: Georgia, 'Times New Roman', Times, serif;
     }
 
@@ -164,4 +164,55 @@ text-decoration: none;
     }
 ol li a:hover {
     color: green;
+}
+
+.gallery1 {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    padding-top: 15px;
+    color:darkblue;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.gallery-text {
+    position: relative;
+        font-family: Arial, Helvetica, sans-serif;
+        color:black;
+        font-size:  26px;
+        padding-bottom: 30px;
+        padding-left: 30px;
+        padding-top: 30px;
+        display: flex;
+        justify-content: center;
+}
+
+.container {
+    width: 100%;
+    min-height: 50vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 50px 8%;
+}
+
+.gallery {
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   grid-gap:30px;
+}
+
+.gallery img {
+    width: 100%;
+}
+.king-text {
+    font-size: 20px;
+    color: darkblue;
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+}
+
+.king-text:hover {
+    color: red;
 }
